# gann

./: CMakeLists.txt  README
examples/paraboloid/: main.cpp
examples/paraboloid/scripts/: paraboloid_run.sh  paraboloid_stats.gpi
examples/paraboloid/src/: paraboloid.cpp
examples/pointsfit/scripts/: pointsfit_func.gpi  pointsfit_run.sh  pointsfit_stats.gpi
examples/pointsfit/src/: pointsfit.cpp
examples/seltest/src/: seltest.cpp
include/gann/: ga.h  gann.h  gann.hpp  log.h  mlp.h  util.h
src/: ga.cpp  gann.cpp  mlp.cpp  util.cpp
